k8s/base/backend/service-preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service-preview
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
    - name: http
      port: 3001
      targetPort: http
